[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["masond <drmason13@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
petgraph = "0.5.1"
parse-display = "0.1.1"
once_cell = "1.7.2"
regex = "1.4.6"
indoc = "1.0.3"
